prevent column header from collapsing

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ table {
 
 .resizable {
   resize: horizontal;
+  min-width: max-content;
 }
 
 *::-webkit-resizer {
